--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,2 @@
-
-MONGO_URI='mongodb+srv://sadhilsadhil29:fH8Pgj8KsiPAZgPH@cluster0.v7b8y.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+MONGO_URI='mongodb://127.0.0.1:27017'
 PORT=5000
